tests/NormalTests/paczka1/small_fuzzy/72438807.err
Error in line 1: 639CVdA6mx A786 21,6
Error in line 15: qOfDuI4LQO A985 /53,9
